<resources>
    <string name="app_name">SecureStorage</string>
    <string name="join_today">Join Today</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="signup">Sign Up</string>
    <string name="signup_now">Sign Up Now</string>
    <string name="already_account">Already Have An Account?</string>
    <string name="need_an_account">Need An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="login">Log-in</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_post">New Post</string>
    <string name="payment_details">Payment Details</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="valid_card_number">Valid Card Number</string>
    <string name="expiration_date">EXPIRATION DATE</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv_code">CVV CODE</string>
    <string name="cvv">CVV</string>
    <string name="card_owner">CARD OWNER</string>
    <string name="card_owner_name">Card Owner Name</string>
    <string name="edit_card_details">Edit/Delete Card Details</string>
    <string name="card_details">Card Details</string>
    <string name="save_card_info">Save Card Info</string>
    <string name="edit_card_info">Edit Card Info</string>
    <string name="delete_card_details">Delete Card Details</string>

    <string name="home">Home</string>
    <string name="pro">Pro</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="username_not_empty">Please enter username. It can not be empty.</string>
    <string name="email_not_empty">Please enter email. It can not be empty.</string>
    <string name="email_not_valid">Please enter valid email.</string>
    <string name="password_not_empty">Please enter password. It can not be empty.</string>
    <string name="password_not_match">Password and confirm password fields should be same.</string>
    <string name="title_not_empty">Please enter title. It can not be empty.</string>
    <string name="content_not_empty">Please enter content. It can not be empty.</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="no_posts_msg">No posts from you.</string>
    <string name="no_account_linked">No account Linked</string>
    <string name="twitter_account_linked">Twitter account Linked</string>
    <string name="update_profile_pic">Update Profile Pic</string>
    <string name="rooted_device_alert_title">Rooted Device Alert</string>
    <string name="rooted_device_alert_description">The app can not run as the android device is either a rooted device or an emulator.</string>
    <string name="credit_card_alert">Please enter valid credit card number.</string>
    <string name="expiration_date_alert">Please enter valid expiration date.</string>
    <string name="cvv_alert">Please enter valid cvv number.</string>
    <string name="card_owner_name_alert">Please enter valid card owner name.</string>
    <string name="txt_enter_email">Enter e-mail</string>
    <string name="txt_enter_username">Enter username</string>
    <string name="txt_enter_password">Enter Password</string>
</resources>
