<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/credit_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="vertical"
            android:padding="@dimen/margin_8">

            <TextView
                style="@style/TextViewNormal"
                android:text="@string/payment_details" />

            <TextView
                style="@style/TextViewSmall"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/card_number" />

            <EditText
                android:id="@+id/et_card_number"
                style="@style/EdittextField"
                android:hint="@string/valid_card_number"
                android:inputType="number"
                android:maxLength="16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewSmall"
                        android:text="@string/expiration_date" />

                    <EditText
                        android:id="@+id/et_expiration_date"
                        style="@style/EdittextField"
                        android:hint="@string/mm_yy"
                        android:inputType="number"
                        android:maxLength="5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewSmall"
                        android:text="@string/cvv_code" />

                    <EditText
                        android:id="@+id/et_cvv"
                        style="@style/EdittextField"
                        android:hint="@string/cvv"
                        android:inputType="number"
                        android:maxLength="3" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/TextViewSmall"
                android:text="@string/card_owner" />

            <EditText
                android:id="@+id/et_card_owner_name"
                style="@style/EdittextField"
                android:hint="@string/card_owner_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_vertical_margin"
                android:id="@+id/btn_save_card"
                style="@style/clickButton"
                android:text="@string/save_card_info" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>