<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewHeading"
                android:text="@string/join_today" />

            <View
                style="@style/LineSeparator"
                android:layout_marginBottom="@dimen/margin_8"></View>

            <TextView
                style="@style/TextViewNormal"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/username" />

            <EditText
                android:id="@+id/et_username"
                style="@style/EdittextField" />

            <TextView
                style="@style/TextViewNormal"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EdittextField"
                android:inputType="textPassword"/>

            <TextView
                style="@style/TextViewNormal"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/EdittextField"
                android:inputType="textPassword"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_16">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_signup"
                    style="@style/clickButton"
                    android:text="@string/signup" />
            </LinearLayout>

            <View
                style="@style/LineSeparator"
                android:layout_marginBottom="@dimen/margin_8"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_16">
                <TextView
                    style="@style/TextViewNormal"
                    android:text="@string/already_account" />

                <TextView
                    android:id="@+id/btn_signin"
                    style="@style/TextViewBlueColor"
                    android:text="@string/sign_in"
                    android:layout_marginLeft="@dimen/margin_16"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>