<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_card"
                android:layout_marginTop="@dimen/button_height"
                style="@style/clickButton"
                android:text="@string/save_card_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_get_card_info"
                android:layout_marginTop="@dimen/button_vertical_margin"
                style="@style/clickButton"
                android:text="@string/card_details" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_edit_card_info"
                android:layout_marginTop="@dimen/button_vertical_margin"
                style="@style/clickButton"
                android:text="@string/edit_card_details" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_vertical_margin"
                android:id="@+id/btn_logout"
                style="@style/clickButton"
                android:text="@string/logout" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>